Cleanup datastreams after the test